--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 .env.local
 .env.production
 .env.staging
+.env.yaml
 
 # Database Files (PostgreSQL via Neon Cloud - no local DB files)
 # Note: *.db patterns kept for OS files (Thumbs.db, ehthumbs.db)
