--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,137 @@
-Flask==2.3.2
-Flask-WTF==1.1.1
-Flask-SQLAlchemy==3.0.5
-Flask-Migrate==4.0.4
-Flask-Mail==0.9.1
+absl-py==2.3.1
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+alembic==1.17.1
+annotated-types==0.7.0
+anyio==4.11.0
+astunparse==1.6.3
+attrs==25.4.0
+bcrypt==5.0.0
+blinker==1.9.0
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+cloudinary==1.44.1
+colorama==0.4.6
+contourpy==1.3.3
+cycler==0.12.1
+dataclasses-json==0.6.7
+dnspython==2.8.0
+dominate==2.9.1
+email-validator==2.3.0
+faiss-cpu==1.12.0
+filelock==3.20.0
+Flask==3.1.2
 Flask-Bootstrap==3.3.7.1
-WTForms==3.0.1
-SQLAlchemy==2.0.15
-Werkzeug==2.3.6
-psycopg2-binary==2.9.9
-cloudinary==1.36.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-gunicorn==20.1.0
-reportlab==4.0.7
-pandas==2.0.3
-numpy==1.26.4
-scikit-learn==1.3.2
-tensorflow==2.18.0
-matplotlib==3.8.2
-opencv-python==4.9.0.80
-requests==2.31.0
-bcrypt==4.0.1
-flask-cors==4.0.0
-langchain==0.1.0
-langchain-community==0.0.20
-sentence-transformers==2.3.1
-faiss-cpu==1.8.0
-PyMuPDF==1.23.26
-python-dotenv==1.0.0
+flask-cors==6.0.1
+Flask-Mail==0.10.0
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.2
+flatbuffers==25.9.23
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.9.0
+gast==0.6.0
+google-pasta==0.2.0
+greenlet==3.2.4
+grpcio==1.76.0
+h11==0.16.0
+h5py==3.15.1
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+idna==3.11
+itsdangerous==2.2.0
+Jinja2==3.1.6
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+keras==3.12.0
+kiwisolver==1.4.9
+langchain==1.0.2
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.0.1
+langchain-text-splitters==1.0.0
+langgraph==1.0.1
+langgraph-checkpoint==3.0.0
+langgraph-prebuilt==1.0.1
+langgraph-sdk==0.2.9
+langsmith==0.4.38
+libclang==18.1.1
+Mako==1.3.10
+Markdown==3.9
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.1
+matplotlib==3.10.7
+mdurl==0.1.2
+ml_dtypes==0.5.3
+mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+namex==0.1.0
+networkx==3.5
+numpy==2.2.6
+opencv-python==4.12.0.88
+opt_einsum==3.4.0
+optree==0.17.0
+orjson==3.11.4
+ormsgpack==1.11.0
+packaging==25.0
+pandas==2.3.3
+pillow==12.0.0
+propcache==0.4.1
+protobuf==6.33.0
+psycopg2-binary==2.9.11
+pydantic==2.12.3
+pydantic-settings==2.11.0
+pydantic_core==2.41.4
+Pygments==2.19.2
+PyMuPDF==1.26.5
+pyparsing==3.2.5
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytz==2025.2
+PyYAML==6.0.3
+regex==2025.10.23
+reportlab==4.4.4
+requests==2.32.5
+requests-toolbelt==1.0.0
+rich==14.2.0
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+sentence-transformers==5.1.2
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.44
+sympy==1.14.0
+tenacity==9.1.2
+tensorboard==2.20.0
+tensorboard-data-server==0.7.2
+tensorflow==2.20.0
+termcolor==3.2.0
+tf_keras==2.20.1
+threadpoolctl==3.6.0
+tokenizers==0.22.1
+torch==2.9.0
+tqdm==4.67.1
+transformers==4.57.1
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.2
+urllib3==2.5.0
+visitor==0.1.3
+Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==2.0.0
+WTForms==3.2.1
+xxhash==3.6.0
+yarl==1.22.0
+zstandard==0.23.0
